# stepdiff

./: .env.example  .gitignore  README.md  pyproject.toml
backend/stepdiff/: __init__.py  main.py  schemas.py  storage.py
backend/stepdiff/api/: routes.py
backend/stepdiff/browser/: controller.py  state.py
backend/stepdiff/compaction/: codec.py  diff_dom.py  diff_visual.py  routes.py  types.py
backend/stepdiff/eval/: evaluator.py
demo_pages/: local_checkout.html
examples/runs/email_fill/: expected.json  run.json  steps.jsonl
examples/runs/invalid_email/: expected.json  run.json  steps.jsonl
examples/runs/login_error/: expected.json  run.json  steps.jsonl
examples/runs/login_error/steps/: step_001_after.json  step_001_before.json
examples/runs/modal_open/: expected.json  run.json  steps.jsonl
scripts/: compact_run.py  eval_run.py  record_demo.py  run_test_matrix.py
tasks/: local_checkout.json  login_error.json  modal_flow.json
tests/: conftest.py  dom_diff_matrix_cases.py  routing_matrix_cases.py  test_api.py  test_codec_routing.py  test_compact_run.py  test_diff_dom.py  test_diff_visual.py  test_dom_diff_matrix.py  test_evaluator.py  test_example_runs.py  test_local_checkout_routes.py  test_routing_matrix.py  test_schemas.py  test_state.py  test_storage.py  test_tasks.py
viewer/: package-lock.json
viewer/src/: App.css  App.tsx  RunView.css  RunView.tsx  StepCard.css  StepCard.tsx  TokenBar.css  TokenBar.tsx  api.ts  index.css
