[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stepdiff"
version = "0.1.0"
description = "StepDiff — compact browser step diffs for automation agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "playwright>=1.49.0",
    "pillow>=11.0.0",
    "numpy>=2.1.0",
    "pytesseract>=0.3.13",
    "opencv-python-headless>=4.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.42.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["backend/stepdiff"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["backend", "tests"]
